# Syndesi

./: .gitignore  .pre-commit-config.yaml  .pylint  .readthedocs.yaml  CHANGELOG.md  CMakeLists.txt  INSTALL.md  Notes.md  OPTIONAL_BACKEND.md  README.md  README_old.md  SyndesiConfig.cmake  TODO.md  make_arduino_library.sh  pyproject.toml  setup.py  test.py  test_tmc.ipynb  tests.ipynb
Cpp/: .gitignore  Notes.md  README.md  install_arduino_library.sh  make_arduino_library.sh
Cpp/Notes/: Notes.md
Cpp/arduino/examples/EthernetTest/: EthernetTest.ino  syndesi_config.h
Cpp/arduino/syndesi/: frame.cpp  frame.h  framemanager.cpp  framemanager.h  icontroller.h  iinterpreter.h  network.h  sdid.cpp
Cpp/arduino/syndesi/ethernet/: ethernetdevice.h
Cpp/arduino_examples/EthernetTest/: EthernetTest.ino
Cpp/backup/scripts/: cpp.py  framemanager_template.h.txt  payloads_template.h.txt  utilities.py
Cpp/examples/local_ethernet/device/: device.cpp
Cpp/examples/local_ethernet/host/: host.cpp  syndesi_config.h
Cpp/include/: core.h  frame.h  framemanager.h  icontroller.h  inetwork_bottom.h  inetwork_top.h  interfaces.h  network.h  sdid.h  settings.h  syndesi_tools.h
Cpp/include/ethernet/: ethernetdevice.h
Cpp/include/interpreters/: raw.h
Cpp/src/: core.cpp  frame.cpp  framemanager.cpp  sdid.cpp  settings.cpp
Python/: .gitignore  DRIVERS.md  README.md  flake.nix  setup.py  test_secsgem.py
Python/docs/source/: Architecture.rst  Protocols.rst  Syndesi.rst  Usage.rst  experimental_features.rst  getting_started.rst  index.rst
Python/examples/adapters/: tcpbin.py  tcpbin_remote.py
Python/experiments/: abc.ipynb  overload.ipynb
Python/syndesi/: __init__.py  adapters.py  descriptors.py  protocols.py
Python/syndesi.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
Python/syndesi/adapters/: IP.py  VISA.py  __init__.py  adapter.py  auto.py  iadapter.py  ip.py  ip_server.py  proxy.py  remote.py  serial.py  serialport.py  stop_conditions.py  timed_queue.py  timeout.py  visa.py
Python/syndesi/cli/: adapter.py  command.py  shell.py  syndesi.py
Python/syndesi/descriptors/: Serial.py  VISA.py  __init__.py  descriptor.py  ip.py  visa.py
Python/syndesi/descriptors/syndesi/: Syndesi.py  frame.py  network.py
Python/syndesi/drivers/: base.py  sdp.py
Python/syndesi/drivers/meta/: base.py  instruments.py
Python/syndesi/drivers/primary/: primarydriver.py  sdp.py
Python/syndesi/protocols/: __init__.py  commands.py  delimited.py  hsms.py  iprotocol.py  modbus.py  protocol.py  raw.py  raw_stream.py  scpi.py  sdp.py  secs1.py  secs2.py  secs2_backup.py
Python/syndesi/proxy/: proxy.py  proxy_api.py
Python/syndesi/shell/: syndesi.py
Python/syndesi/tools/: log.py  logger.py  others.py  remote_api.py  remote_server.py  shell.py  stop_conditions.py  types.py
Python/syndesi/wrappers/: autodetect.py  ip.py  serial.py  wrapper.py
Python/tests/: basic.ipynb  inheritance.ipynb  instrument.ipynb
Python/tests/adapters/: response_server.py  serial_delayer.py  test_ip.py  test_modbus.py  test_serialport.py
Python/tests/protocols/: test_modbus.py  test_secs2.py
arduino/examples/: EthernetTest.ino
arduino/examples/EthernetTest/: EthernetTest.ino
arduino_examples/EthernetTest/: EthernetTest.ino
backup/scripts/: callbacks_template.h.txt  commands.py  payloads_template.cpp.txt  settings.py
docs/: requirements.txt
docs/cheat sheet/: cheat sheet.drawio
docs/diagrams/: write.py
docs/diagrams/tools/: class_diagram.py  diagram.py  flow_diagram.py  styling.py
docs/source/: Adapters.rst  Architecture.rst  Drivers.rst  Syndesi.rst  Usage.rst  adapters.rst  api_reference.rst  component.rst  conf.py  error_handling.rst  index.rst  introduction.rst  protocols.rst  test.md  testing.rst
docs/source/assets/: .$adapters_protocols_drivers.bkp  adapters_protocols_drivers  colors.txt  syndesi
examples/adapters/: tcpbin.py  tcpbin_remote.py
examples/local_ethernet/: CMakeLists.txt
examples/local_ethernet/device/: device.cpp  syndesi_config.h
examples/local_ethernet/host/: host.cpp  syndesi_config.h
include/: buffer.h  callbacks.h  cinterface.h  config.h  core.h  frame.h  framemanager.h  host.h  iinterpreter.h  interfaces.h  ipayload.h  linkedlist.h  network.h  payloads.cpp  payloads.h  sdid.h  syndesi.h
include/ethernet/: ethernethost.h  system.h  systemethernet.h
include/interpreters/: bcs_spi.h  error.h  raw.h
scripts/: callbacks_template.h.txt  changes.pkl  code_quality.sh  commands.yaml  cpp.py  files_dates_hashes.pkl  framemanager_template.h.txt  generate_commands.py  payload_class_template.py.txt  payloads_template.h.txt  payloads_template.py.txt  python.py  syndesi_config_template.h.txt  utilities.py
src/: buffer.cpp  cinterface.cpp  core.cpp  frame.cpp  framemanager.cpp  network.cpp  sdid.cpp
syndesi/: __init__.py  __main__.py  component.py  version.py
syndesi/adapters/: __init__.py  adapter.py  adapter_worker.py  auto.py  bytesadapter.py  bytesadapter_worker.py  descriptors.py  ip.py  ip_server.py  serialport.py  stop_condition.py  stop_conditions.py  timeout.py  tracehub.py  utils.py  visa.py
syndesi/adapters/backend/: adapter_backend.py  adapter_manager.py  adapter_session.py  backend.py  backend_tools.py  descriptors.py  ip_backend.py  serialport_backend.py  stop_condition_backend.py  timed_queue.py  timeout.py  visa_backend.py
syndesi/api/: api.py
syndesi/cli/: backend_console.py  backend_status.py  backend_wrapper.py  console.py  shell.py  shell_tools.py  syndesi.py  terminal_tools.py
syndesi/protocols/: __init__.py  delimited.py  modbus.py  protocol.py  raw.py  scpi.py  secs1.py
syndesi/proxy/: proxy_api.py
syndesi/remote/: remote.py
syndesi/scripts/: syndesi.py  syndesi_backend.py  syndesi_trace.py
syndesi/tools/: backend_api.py  backend_logger.py  errors.py  exceptions.py  log.py  log_settings.py  logmanager.py  types.py
tests/adapters/: ip_delayer.cpp  ip_delayer.py  serial_delayer.py  test_ip.py  test_serialport.py
tests/protocols/: test_modbus.py
user_config/: syndesi_config.h
(+6 files in other folders)
